--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,8 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.firebaseui:firebase-ui-firestore:6.3.0'
 
+    //direction api
+    implementation 'com.google.maps:google-maps-services:0.2.9'
+
 
 }
